0.11

0.10 2020-01-12T00:11:37+01:00
 - Update Module::Install to 1.19 version.
 - Update copyright years to 2020.
 - Update my github user name.
 - Update to Map::Tube 3.62.

0.09 2017-11-19T08:01:06+01:00
 - Add EXAMPLE5 section to doc.
 - Add test for ok_map_functions().
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Fix author test dependencies.
 - Remove bad test.
 - Update Module::Install to 1.18 version.
 - Update README file.
 - Update author name.
 - Update copyright years to 2017.
 - Update to Map::Tube 3.37.

0.08 2015-10-23T10:20:03+02:00
 - Implement station order.
 - Improve comment in tests.
 - Rewrite XML map to new version with line IDs.
 - Rewrite XML map to new version without junctions.

0.07 2015-10-15T13:55:29+02:00
 - Add EXAMPLE4 to doc.
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add tests for get_line_by_id() and get_line_by_name() methods.
 - Add test for get_lines() method.
 - Add tests for get_stations() method.
 - Improve description for get_lines() in doc.
 - Update to Map::Tube 3.06.

0.06 2015-10-02T13:17:33+02:00
 - Add tests for get_node_by_id() and get_node_by_name() methods.
 - Fix Test::Map::Tube and planning of tests.
 - Move author tests to xt/ directory.
 - Rewrite SEE ALSO section to new style.
 - Update Module::Install to 1.16 version.

0.05 2015-03-06T09:01:05+01:00
 - Fix test dependencies.

0.04 2015-03-05T16:37:24+01:00
 - Add <?xml> header to XML document.
 - Add 04-map.t test.
 - Add Map::Tube::Singapore to SEE ALSO section in doc.
 - Add lines to XML document.
 - Move comment in xml file to top.

0.03 2015-01-20T07:34:18+01:00
 - Add Map::Tube::Budapest to SEE ALSO section in doc.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Nanjing to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Fix XML map (duplicite links).
 - Update copyright years to 2015.
